Overall fixes, supressing some redundant warnings and de-bloat